force-app/main/core/objects/Reseller__c/fields/AgreementNumber__c.field-meta.xml
<CustomField>
    <fullName>AgreementNumber__c</fullName>
    <label>Agreement Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>