force-app/main/core/objects/Reseller__c/fields/LegalName__c.field-meta.xml
<CustomField>
    <fullName>LegalName__c</fullName>
    <label>Legal name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>