force-app/main/core/objects/Reseller__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>White Label</fullName>
            </value>
            <value>
                <fullName>Sales Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>