force-app/main/core/objects/Reseller__c/fields/Websites__c.field-meta.xml
<CustomField>
    <fullName>Websites__c</fullName>
    <label>Websites</label>
    <type>TextArea</type>
</CustomField>