force-app/main/core/objects/Reseller__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>AgreementNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>